Actions
Bug #11166
closedthread becames broken after unsuccessful system() or Process.spawn() call
Bug #11166:
thread becames broken after unsuccessful system() or Process.spawn() call
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
2.2.0
Description
After calling system() or Process.spawn() with non-existing command the thread works incorrectly:
- doesn't response to thread kill
- hangs forever in condition wait or mutexes
The least leads to hanging in file write() or puts() calls due wrong mutex handling or to "No live threads left. Deadlock? (fatal)"
The minimal reproducible script which shows if the thread becames unkillable:
Files
Updated by cvss (Kirill Vechera) about 11 years ago
- Assignee deleted (
core) - ruby -v set to 2.2.0
Updated by nobu (Nobuyoshi Nakada) about 11 years ago
- Status changed from Open to Closed
Applied in changeset r50600.
process.c: do not discard status
- process.c (rb_spawn_process): do not discard global escape
status. [ruby-core:69304] [Bug #11166] - process.c (rb_execarg_spawn): extract the start procedure in a
parent process with ensuring the end procedure.
Updated by nagachika (Tomoyuki Chikanaga) about 11 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN to 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: REQUIRED
Updated by nobu (Nobuyoshi Nakada) about 11 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: REQUIRED to 2.0.0: REQUIRED, 2.1: REQUIRED, 2.2: REQUIRED
Seems same behavior since 1.9.
Actions