process.c: do not discard status

* process.c (rb_spawn_process): do not discard global escape
  status.  [ruby-core:69304] [Bug #11166]
* process.c (rb_execarg_spawn): extract the start procedure in a
  parent process with ensuring the end procedure.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@50600 b2dd03c8-39d4-4d8f-98ff-823fe69b080e